MFH: Fixed bug #34156 (memory usage remains elevated after memory limit is reached)